--- a/src/web/html/index.html
+++ b/src/web/html/index.html
@@ -20,7 +20,7 @@
 -->
 <!-- htmlmin:ignore -->
 <!DOCTYPE html>
-<html lang="en" class="classic">
+<html lang="en" class="solarizedDark">
 
 <head>
     <meta charset="UTF-8">
@@ -479,11 +479,7 @@
                     <div class="form-group option-item">
                         <label for="theme" class="bmd-label-floating"> Theme (only supported in modern browsers)</label>
                         <select class="form-control" option="theme" id="theme">
-                            <option value="classic">Classic</option>
-                            <option value="dark">Dark</option>
-                            <option value="geocities">GeoCities</option>
                             <option value="solarizedDark">Solarized Dark</option>
-                            <option value="solarizedLight">Solarized Light</option>
                         </select>
                     </div>
 
